<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GreenIQ</string>
    <string name="home">Home</string>
    <string name="waste_info">Waste Info</string>
    <string name="carbon_footprint">Footprint</string>
    <string name="air_quality">Air Quality</string>
    <string name="welcome_user">Welcome, user!</string>
    <string name="enter_email">Login using email and password:</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="create_new_account">Create New Account</string>
    <string name="welcome_new_user">Welcome, new user!</string>
    <string name="enter_account_details_below">Enter account details below:</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="register">REGISTER</string>
    <string name="location">LOCATION</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="username">USERNAME</string>
    <string name="settings">SETTINGS</string>
    <string name="done">Done</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="language">LANGUAGE</string>
    <string name="theme">THEME</string>
    <string name="about_application">ABOUT APPLICATION</string>
    <string name="logout">LOGOUT</string>
    <string name="about_application_lowercase">About Application</string>
    <string name="dialog">Recycling and waste management are critical points that contributes to protection and preservation of the environment. \n\nThis app provides a convenient, efficient, and user-friendly visual to manage household waste by informing users on proper waste sorting, tracking them of their recycling efforts, and enabling them to connect with local recycling facilities.</string>
    <string name="ok">OK</string>
    <string name="air_quality1">Air Quality</string>
    <string name="click_button_to_get_air_quality">click button to get air quality</string>
    <string name="nearest_city">Nearest City:</string>
    <string name="click_button_to_get_nearest_city">click button to get nearest city</string>
    <string name="nearest_city_aqi">Nearest City AQI:</string>
    <string name="get_air_quality">Get Air quality</string>
    <string name="select_usage_of_electricity">Select usage of electricity for today:</string>
    <string name="calculate">Calculate</string>
    <string name="select_type_of_food">Select type of food you\'ve cooked:</string>
    <string name="input">Input</string>
    <string name="food_consumption_in_g">Food consumption (in grams)</string>
    <string name="transport">Transport</string>
    <string name="food">Food</string>
    <string name="electricity">Electricity</string>
    <string name="select_type_of_your_transport">Select type of your transport:</string>
    <string name="distance_of_travel">Distance of travel (in km)</string>
    <string name="schedule_of_activities">SCHEDULE OF ACTIVITIES:</string>
    <string name="recycling_sites_near_you">🗑 Recycling sites near you:</string>
    <string name="today_s_schedule">TODAY\'S SCHEDULE</string>
    <string name="current_event">CURRENT EVENT</string>
    <string name="save_avatar">SAVE AVATAR</string>
    <string name="save_details">SAVE DETAILS</string>
    <string name="back">back</string>
    <string name="choose_field_of_consumption">Choose consumption for today:</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="_default">Default</string>
    <string name="your_photo">your photo</string>
    <string name="coin">COIN</string>
    <string name="transport_carbon_footprint">Transport Carbon Footprint</string>
    <string name="electricity_carbon_footprint">Electricity Carbon Footprint</string>
    <string name="food_carbon_footprint">Food Carbon Footprint</string>
    <string name="filipino">FILIPINO</string>
    <string name="english">ENGLISH</string>
    <string name="title_event">TITLE EVENT</string>
    <string name="details">details</string>
    <string name="start_date">START DATE</string>
    <string name="tilde" translatable="false">~</string>
    <string name="end_date">END DATE</string>
    <string name="usual_shift">USUAL SHIFT</string>
    <string name="greeniq_carbon_footprint_tracker">GreenIQ Carbon Footprint Tracker</string>
    <string name="login_email">test1@gmail.com</string>
    <string name="login_password">aA12345678*</string>
    <string name="greeniq_profile">🌳 GreenIQ profile | </string>

    <string name="login_success">Login success!</string>
    <string name="login_failed">Login failed!</string>
    <string name="youve_left_a_field_empty">You\'ve left a field empty!</string>
    <string name="user_already_exists">Username already exists.</string>
    <string name="all_fields_must_not_empty">All fields must not be empty.</string>
    <string name="account_registered_for">Account registered for </string>
    <string name="registration_failed">Registration failed!</string>
    <string name="invalid_phone_number">Invalid Phone number!</string>
    <string name="field_should_have">Field should have at least 8 characters: one uppercase and lowercase character, one digit number, and one special character.</string>
    <string name="invalid_email">Invalid Email!</string>
    <string name="updating_profile_for">"Updating profile for "</string>
    <string name="saving_image">Saving image…</string>
    <string name="please_wait">Please wait…</string>
    <string name="saved_image">Saved Image</string>
    <string name="failed_to_save_image">Failed to Save Image</string>
    <string name="uploading">" Uploading "</string>
    <string name="total_carbon">Total Carbon</string>
    <string name="your_food_carbon_footprint">Your food carbon footprint is </string>
    <string name="your_electricity_carbon_footprint">Your electricity carbon footprint is </string>
    <string name="your_transport_carbon_footprint">Your transport carbon footprint is </string>
    <string name="invalid_input">Invalid input:\nPlease enter a numeric value.</string>
</resources>