<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.EditLanguageFragment"
    style="@style/SCREEN">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/RELATIVE">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="11dp">

            <TextView
                android:id="@+id/textLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/back1"
                android:text="@string/language"
                style="@style/TEXT"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/back1"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_marginStart="14dp"
                android:contentDescription="@string/back"
                android:src="@drawable/baseline_arrow_back_24" />
        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_fil"
            style="@style/brown"
            android:layout_gravity="center"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/phil"
            android:drawablePadding="8dp"
            android:text="@string/filipino" />

        <Button
            android:id="@+id/btn_eng"
            style="@style/brown"
            android:layout_gravity="center"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/english"
            android:drawablePadding="8dp"
            android:text="@string/english" />

        <Button
            android:id="@+id/btn_theme"
            style="@style/FIELDS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/done" />
    </LinearLayout>

</LinearLayout>