<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SCREEN">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Fragments.AirQualityFragment"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView"
            style="@style/FIELDS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/air_quality1"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_background" />

        <TextView
            style="@style/TEXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nearest_city"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/nearestCityTv"
            style="@style/FIELDS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/click_button_to_get_nearest_city"
            android:textAlignment="center"
            android:textSize="20sp"
            android:background="@drawable/round_background"
            android:textStyle="bold"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginTop="5dp"/>

        <TextView
            style="@style/TEXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/nearest_city_aqi"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/AQItv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/click_button_to_get_air_quality"
            android:textAlignment="center"
            style="@style/FIELDS"
            android:textSize="20sp"
            android:background="@drawable/round_background"
            android:textStyle="bold"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginTop="5dp" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="35dp" />

        <Button
            android:id="@+id/button4"
            style="@style/brown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="get"
            android:text="@string/get_air_quality"
            android:textSize="20sp"
            android:layout_marginTop="35dp" />

    </LinearLayout>
</ScrollView>