<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.CarbonElectricityFragment"
    android:orientation="vertical"
    style="@style/SCREEN">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="13dp"
        style="@style/RELATIVE">
        <ImageView
            android:id="@+id/back2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_centerVertical="true"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/greeniq_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/electricity_carbon_footprint"
            android:textSize="21sp"
            android:textStyle="bold"
            android:alpha="0.7"
            style="@style/TEXT"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_usage_of_electricity"
            android:textSize="18sp"
            style="@style/TEXT"/>
        <Spinner
            style="@style/accent_card"
            android:id="@+id/typeSpinnerElectricity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:layout_margin="7dp"
            android:padding="3dp"
            android:layout_gravity="center"
            android:contentDescription="@string/electricity" />
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_margin="10dp">
            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/image_Electricity"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:iss_auto_cycle="true"
                app:iss_corner_radius="15"
                app:iss_delay="0"
                app:iss_error_image="@color/neutral"
                app:iss_period="3000"
                app:iss_placeholder="@color/neutral" >
            </com.denzcoskun.imageslider.ImageSlider>
        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/calculateButtonElectricity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/calculate"
            android:layout_gravity="center"
            style="@style/accent_card"/>
    </LinearLayout>

</LinearLayout>